--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,7 +20,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "typeRoots": ["./types", "node_modules/@types"]
+
   },
   "include": ["src"]
 }
