--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tombatossals/chords-db": "^0.5.1",
     "@tombatossals/react-chords": "^0.2.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "use-breakpoint": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
